--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Welcome</title>
+    <style>
+        #div1 {
+            text-align: center;
+        }
+        .redText{
+            color:darkblue;
+            background-color: white;
+            border-color: aliceblue;
+        }
+        input{
+            text-align: left;
+        }
+        .redText:hover{
+            color: red;
+        }
+
+    </style>
+
 </head>
 <body style="background-color: aliceblue;">
           <h1 style="text-align: center">Welcome!</h1>
