Register with css styles

--- a/register.html
+++ b/register.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Register</title>
-  
+    <style>
+        #div1 {
+           text-align: center;
+       }
+       #btnRegis:hover{
+           font-size: large;
+           cursor:pointer;
+           font-size: x-large;
+       }
+       #btnCan:hover{
+           font-size: large;
+           cursor:pointer;
+           font-size: x-large;
+       }
+      
+         
+   </style>
 </head>
 <body style="background-color: aliceblue;">
           <h1 style="text-align: center">Register</h1>
           <div style="text-align: center" style="margin-bottom: 1rem;">          
-            <Input type="text" placeholder="Username">
+            <Input type="text" placeholder="Username"> 
           </div>
 <br>
            <div style="text-align: center" style="margin-bottom: 1rem;">
