--- a/index.html
+++ b/index.html
@@ -36,8 +36,15 @@
         <div>
             <button style="color:skyblue" id="btnLogin">
                 LogIn </button>
-            <button style="color: skyblue" >Register</button></a>
+                <a href="register.html">
+            <button style="color: skyblue" >Register</button></a> 
         </div>
-        
+        <script>
+            // Javascript
+            let buttonLogin = document.querySelector('#btnLogin');
+            buttonLogin.onclick =function () {
+                alert("Logged In Succesfully!")
+            }
+        </script>
 </body>
 </html>
