--- a/register.html
+++ b/register.html
@@ -53,10 +53,17 @@
                 <a href="./index.html">             
             <button style="color: blue" id="btnRegis">Register</button></a>
                     </div> 
+              <a href="./index.html"> 
                     <div style="text-align: center;">
                     <button style="color: red" id="btnCan">Cancel</button></a>
                 </div>
         </div>
-        
+        <script>
+            // Javascript
+            let btnRegis = document.querySelector('#btnRegis');
+            btnRegis.onclick =function () {
+                alert("Registered Succesfully!")
+            }
+        </script>
 </body>
 </html>
